--- a/index.html
+++ b/index.html
@@ -371,5 +371,7 @@
 </body>
 </html>
 
-<!--Code by: Keszthelyi Zakariás-->
-<!--https://github.com/ZakariasKeszt/Mastermind-->
+<!--Code by: Keszthelyi Zakariás
+-->
+<!--https://github.com/ZakariasKeszt/Mastermind
+-->
